TRUNK-2051 - backporting to branches/1.7.x - follow-up fix to content padding (too much space up top)
git-svn-id: http://svn.openmrs.org/openmrs/branches/1.7.x@18481 5bac5841-c719-aa4e-b3fe-cce5062f897a

--- a/web/openmrs.css
+++ b/web/openmrs.css
@@ -152,7 +152,8 @@ a:hover {
 	
 #content {
 	margin: 0px 0 0 0;
-	padding: 80px 10px 10px 10px;	font-size: 1.2em;
+	padding: 50px 10px 10px 10px;
+	font-size: 1.2em;
 	background-color: #ffffff;
 	z-index: 8;
 }
